[metadata]
name = proyectofinal
version = 0.0.1
description = user model de django
author = Walter Riedel
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = django_flex_user
python_requires = >=3.0
install_requires =
    django
    django-dirtyfields
    django-phonenumber-field
    django-rest-multiple-models
    djangorestframework
    djangorestframework-simplejwt
    phonenumbers
    regex
    social-auth-app-django
    tldextract
